# libigl_utils

./: .gitignore  CMakeLists.txt  README.md  ex10_mushroom_arap.cpp  ex10_mushroom_fast.cpp  ex11_bunny_arap.cpp  ex11_bunny_fast.cpp  ex12_ghost_arap.cpp  ex12_ghost_fast.cpp  ex14_cage_bbw.cpp  ex15_cage_mesh_bbw.cpp  ex16_cheb.cpp  ex17_spot.cpp  ex1_base.cpp  ex2_dual_skinning.cpp  ex3_biharmonic_weights.cpp  ex4_fast_skinning_transformation.cpp  ex5_starfish.cpp  ex6_arap.cpp  ex7_starfish_arap.cpp  ex8_elip_arap.cpp  ex8_elip_fast.cpp  ex9_cube_arap.cpp  ex9_cube_fast.cpp
models/: cheb.mesh  cheb.tgf  cheb2.tgf  cheb_high.mesh  cheb_high_w.txt  cheb_w.txt  cube_tet_w.txt
models/bunny/: Verts.csv  Weights.csv  Weights.dmat  controllers.tgf
models/cube/: Weights.csv  Weights.dmat  controllers.tgf
models/elips/: Weights.dmat  arap.usda  fast.usda
models/ghost/: Weights.csv  Weights.dmat  arap.usdc  controllers.tgf  fast.usdc
models/mushroom/: Weights.dmat  arap.usdc  controllers.tgf
models/starfish/: Weights.dmat  arap.usda  fast.usda
